--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     {% include navbar.html %}
 
     {% include profile.html %}
-    
+
     {% include description.html %}
-    
+
     {% include projects.html %}
 </body>
+<script>
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 
 </html>
