Set up the footer files and added content.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 ---
 ---
+
 <!DOCTYPE html>
 <html lang="en">
-{% include header.html %}
+  {% include header.html %}
 
-<body>
-    {% include navbar.html %}
-
-    {% include profile.html %}
-    
-    {% include description.html %}
-    
-    {% include projects.html %}
-</body>
-
+  <body>
+    {% include navbar.html %} {% include profile.html %} {% include
+    description.html %} {% include projects.html %} {% include footer.html %}
+  </body>
 </html>
