--- a/blog-list.html
+++ b/blog-list.html
@@ -4,21 +4,18 @@ permalink: /blog-list/
 ---
 
 <div class="blog-list">
-    <h1 class="heading">Blogs</h1>
-    {% for post in site.posts%}
-    <div class="container">
-        <div class="title">
-            <a href="{{post.url}}">{{post.title}}</a>
-        </div>
-        <div class="date">
-            {{post.date | date_to_long_string}}
-        </div>
-        <br>
-        <div class="desc">
-            {{post.content}}
-        </div>
+  <h1 class="heading">Blogs</h1>
+  {% for post in site.posts%}
+  <div class="container">
+    <div class="title">
+      <a href="{{post.url}}">{{post.title}}</a>
     </div>
-    <div class="line"></div>
-    {% endfor %}
+    <div class="blog-info">
+      {{post.author}},
+      <span class="date"> {{post.date | date_to_long_string}}</span>
+    </div>
+    <br />
+  </div>
+  <div class="line"></div>
+  {% endfor %}
 </div>
-
