--- a/blog-list.html
+++ b/blog-list.html
@@ -1,14 +1,15 @@
 ---
-layout: default
+layout: page
 permalink: /blog-list/
 ---
 
+<!-- The page to display all blogs -->
 <div class="blog-list">
   <h1 class="heading">Blogs</h1>
   {% for post in site.posts%}
   <div class="container">
     <div class="title">
-      <a href="{{post.url}}">{{post.title}}</a>
+      <a href="{{post.url}}" class="blogs_post-title">{{post.title}}</a>
     </div>
     <div class="blog-info">
       {{post.author}},
