--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     {% include projects.html %}
 
-    {% include blogs.html %
+    {% include blogs.html %}
     
     {% include footer.html %}
 </body>
