add theme to rest of pages

--- a/index.html
+++ b/index.html
@@ -21,25 +21,11 @@
 
 
 </body>
+<script src="./assets/script/theme.js"></script>
 <script>
-    var theme;
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
-        initializeTheme()
     })
-    function initializeTheme() {
-        theme = localStorage.getItem('theme');
-        console.log(theme)
-        setTheme()
-    }
-    function toggleTheme() {
-        theme = (theme === 'dark' ? "light" : "dark")
-        setTheme()
-    }
-    function setTheme() {
-        document.body.setAttribute("data-theme", theme);
-        localStorage.setItem("theme", theme)
-    }
 </script>
 
 </html>
