added a plugin for jeykll maps, a yml file for location data and embedded map with pointers to the location

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <body>
     {% include navbar.html %}
 
-    {% include profile.html %}
-
     {% include description.html %}
+    {% include map.html %}
+
+    {% include profile.html %}
 
     {% include projects.html %}
 </body>
