--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <div id="preloader"></div>
+    <button id="to-top-button">&#8593;</button>
 
     {% include navbar.html %}
 
@@ -25,11 +26,23 @@
         $('[data-toggle="tooltip"]').tooltip()
     })
 
+    // for preloader
     let preloader = document.getElementById("preloader");
     window.addEventListener("load", () => {
         preloader.style.opacity = 0;
         preloader.style.pointerEvents = "none";
     });
+
+    // for scroll-to-top
+    let toTopButton = document.getElementById("to-top-button");
+    window.onscroll = () => {
+        toTopButton.style.display = document.body.scrollTop > 200 || document.documentElement.scrollTop > 200 ? "block" : "none";
+    }
+    toTopButton.onclick = () => {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
+    
 </script>
 
 </html>
