--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
   <body>
     <div id="preloader">
-      <img
-        src="https://img.icons8.com/external-icongeek26-glyph-icongeek26/300/ffffff/external-jaguar-colombia-icongeek26-glyph-icongeek26.png"
-        alt="Preloader"
-      />
+      <img src="/assets/img/jagurar.png" alt="Preloader" />
       <h2>Javascript Jaguars</h2>
     </div>
 
