--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       <h2>Javascript Jaguars</h2>
     </div>
 
+    {% include navbar.html %}
+
+    {% include profile.html %}
+
     {% include description.html %}
 
     {% include podstatus.html %}
