fix merge conflicts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="en">
   {% include header.html %}
 
-<body>
+<body data-spy="scroll" data-target="#nav-bar" data-offset="140">
     <div id="preloader">
       <img src="/assets/img/jagurar.png" alt="Preloader" />
       <h2>Javascript Jaguars</h2>
