resolved merge conflicts

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 ---
+
 <!DOCTYPE html>
 <html lang="en">
 {% include header.html %}
@@ -13,7 +14,13 @@
     
     {% include map.html %}
 
+    {% include podstatus.html %}
+
     {% include projects.html %}
+
+    {% include blogs.html %}
+    
+    {% include footer.html %}
 </body>
 <script>
     $(function () {
@@ -22,3 +29,4 @@
 </script>
 
 </html>
+
