added map and the styles for the map

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     {% include description.html %}
 
+    {% include map.html %}
+
     {% include podstatus.html %}
 
     {% include projects.html %}
